--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script>
+      const loadPage = () => {
+        window.location.href = window.electronAPI.baseURL;
+      };
+
+      const onLoad = () => {
+        console.info("loading");
+        document.getElementById("offline").style.display = "none";
+        if (localStorage.getItem("cached")) {
+          loadPage();
+        } else {
+          console.info("mostramos offline");
+          fetch(url)
+            .then(() => {
+              localStorage.setItem("cached", 1);
+              loadPage();
+            })
+            .catch(() => {
+              console.info("mostramos error");
+              document.getElementById("offline").style.display = "block";
+            });
+        }
+      };
+    </script>
   </head>
-  <body>
-    adfoijdfsaoij
+  <body onload="onLoad()">
+    <div id="offline" style="font-size: 50px; color: white; display: none">
+      OFFLINE Y TAL
+      <button onClick="onLoad(); return false;">Reintentar</button>
+    </div>
   </body>
 </html>
