--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <!-- <div id="offline" style="display:block;" class="container">
+  <div id="offline" style="display:block;" class="container">
     <img class="img" width="auto" alt="No conexión Bestcycling">
     <svg xmlns="http://www.w3.org/2000/svg" width="224" height="224" viewBox="0 0 224 224">
       <g transform="translate(-729 -252)">
@@ -49,7 +49,7 @@
         </button>
       </div>
     </div>
-  </div> -->
+  </div>
 </body>
 
 </html>
