wip: change init flow, added definePlugin to have more control over build

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="offline" style="display:block;" class="container">
+  <div id="offline" style="display:none;" class="container">
     <img class="img" width="auto" alt="No conexión Bestcycling">
     <svg xmlns="http://www.w3.org/2000/svg" width="224" height="224" viewBox="0 0 224 224">
       <g transform="translate(-729 -252)">
