feat: electron is now aware of service worker state

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div id="offline" style="display:none;" class="container">
-    <img class="img" width="auto" alt="No conexión Bestcycling">
+  <div id="offline" class="container" style="display: none;">
+
     <svg xmlns="http://www.w3.org/2000/svg" width="224" height="224" viewBox="0 0 224 224">
       <g transform="translate(-729 -252)">
         <rect width="224" height="224" transform="translate(729 252)" fill="none" />
@@ -38,7 +38,7 @@
           </g>
         </g>
       </g>
-    </svg></img>
+    </svg>
     <div>
       <p class="title">No podemos cargar Bestcycling TV</p>
       <p class="description">Comprueba tu conexión a internet.</p>
